crates/tui/tests/storybook/snapshots/app_transcript_view_state::compaction_preview_block_states.peek.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
─────────────────────── compacting ────────────────────────
… 6 lines above
- Kept the final checkpoint marker separate.

# Next steps
Update stories and run focused tests.





  tip ctrl+enter / ctrl+q, steer the current response wit…
────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────
 ○ normal                                           1:1 100%
