crates/tui/tests/storybook/snapshots/app_transcript_view_state::exec_block_states.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---

 !ls -1 src

  lib.rs
  main.rs
  parser.rs



  tip ctrl+enter / ctrl+q, steer the current response without…
────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────
 ○ normal                                               1:1 100%
