crates/tui/tests/storybook/snapshots/app_transcript_view_state::mode_block_states.collapsed.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
◆ Plan mode enabled




  tip ctrl+enter / ctrl+q, steer the current response without…
────────────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────
 ○ normal                                               1:1 100%
