crates/tui/tests/storybook/snapshots/app_transcript_view_state::mode_block_states.expanded.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 64 10
  0   0   2 fg=AnsiValue(208)
  0   2  17 fg=AnsiValue(208) attrs=italic
  5   0   6 fg=AnsiValue(208) attrs=bold
  5   6  19 fg=AnsiValue(244)
  5  25   2 fg=AnsiValue(244) attrs=dim
  5  27  35 fg=AnsiValue(244)
  6   0  64 fg=AnsiValue(237)
  7   1   1 fg=Black bg=White
  8   0  64 fg=AnsiValue(237)
  9   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
  9  10  46 bg=AnsiValue(233)
  9  56   8 fg=AnsiValue(244) bg=AnsiValue(233)
