crates/tui/tests/storybook/snapshots/app_transcript_view_state::thinking_block_expanded.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
│ Inspecting the renderer
│ Read the transcript model first.
│ Check the Lua defaults next.
│ Update the stories last.




─ ✿ working… ───────────────────────────────────────────

────────────────────────────────────────────────────────
 ○ normal                                       1:1 100%
