crates/tui/tests/storybook/snapshots/app_transcript_view_state::thinking_block_peek.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 56 16
  0   0   2 attrs=dim|italic
  0   2  23 attrs=bold|dim|italic
  1   0  21 attrs=dim
  2   0  26 attrs=dim|italic
  3   0  25 attrs=dim|italic
  4   0  24 attrs=dim|italic
  5   0  34 attrs=dim|italic
  6   0  21 attrs=dim
  7   0  26 attrs=dim|italic
  8   0  25 attrs=dim|italic
  9   0  24 attrs=dim|italic
 12   0   1 fg=AnsiValue(237)
 12   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 12   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 12   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 12   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 12   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
 12   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 12   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 12   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 12   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 12  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
 12  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
 12  13  43 fg=AnsiValue(237)
 13   1   1 fg=Black bg=White
 14   0  56 fg=AnsiValue(237)
 15   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 15  10  38 bg=AnsiValue(233)
 15  48   8 fg=AnsiValue(244) bg=AnsiValue(233)
